--- a/src/config.properties
+++ b/src/config.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://127.0.0.1:3306/databook
-db.user=root
-db.password=a2001234
+db.url=jdbc:mysql://172.16.59.158:3306/databook
+db.user=user
+db.password=pbo200user216
